# SSGA-Summer2026

./: .gitignore  ARCHITECTURE_BRIEFING.md  DATA_SOURCES.md  DATA_SOURCES_AND_ETL.md  FACTORS.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  SALVAGE_MAP.md  fetch_indices.py  make_slides.py  pyproject.toml  requirements.txt  run_all.py  run_attribution.py  run_m1.py  run_strategy.py  run_walkforward.py
config/: config.yaml  config_experimental_carry_hmm.yaml
docs/: AI_LLM_INTEGRATION_LOG.md  BACKTEST_EVALUATION_SPEC.md  DATA_FEATURES_SPEC.md  MODELING_SPEC.md  SOURCES_AND_RATIONALE.md  WEEK2_ADDITIONS.md
examples/: convert_investing.py  worked_example.py
llm/: README.md
notebooks/: 01_data_ingest.ipynb  02_feature_engineering.ipynb  03_modeling_meta_labeling.ipynb  04_backtest_diagnostics.ipynb
reports/: Meta_Labeling_Deck.pptx  changes_since_last_meeting.md  final_report.md  findings_2026-06-18.md  meeting_agenda_2026-06-16.md  ~$Meta_Labeling_Deck.pptx
runs/: m1_perf_experiments.csv  m1_perf_experiments_round2.csv
scripts/: grid_search.py  tc_sensitivity.py  walk_forward.py
src/: __init__.py  asset_analysis.py  backtest.py  config.py  conformal.py  data.py  data_providers.py  data_validation.py  diagnostics.py  evaluation.py  feature_engineering.py  features.py  grid_search.py  labels.py  llm_features.py  m1.py  m2.py  model_m1.py  model_m2.py  portfolio.py  position_sizing.py  research_logger.py  run_pipeline.py
tests/: conftest.py  test_asset_strategy_overlay.py  test_backtest_accounting.py  test_config_overrides.py  test_data_schema.py  (+9 more)
(+752 files in other folders)
