[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-meta-labeling-pipeline"
version = "0.1.0"
description = "AI-augmented multi-asset meta-labeling research pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pandera>=0.17",
    "yfinance>=0.2",
    "pandas-datareader>=0.10",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require network access",
]
testpaths = ["tests"]
